# salamandra-server

./: .gitignore  Cargo.toml  README.md  cert.pem  docker-compose.yml  key.pem  log4rs.yaml  test_local
.github/workflows/: ci.yml  deployment.yml  e2e.yml  features.yml  main.yml  unittests.yml
migrations/2023-12-21-181323_create_users/: up.sql
migrations/2023-12-22-160533_create_exercises/: down.sql  up.sql
migrations/2023-12-23-101245_create_workouts/: down.sql  up.sql
migrations/2023-12-23-102148_create_exercise_workout/: down.sql  up.sql
migrations/2023-12-24-104943_create_workout_links/: up.sql
migrations/2023-12-24-125916_create_users/: up.sql
migrations/2023-12-24-125930_create_workouts/: down.sql  up.sql
migrations/2023-12-24-125934_create_exercises/: up.sql
migrations/2023-12-24-125940_create_workout_linkers/: down.sql  up.sql
migrations/2024-01-07-165631_create_users/: up.sql
migrations/2024-06-09-152943_create_users/: down.sql  up.sql
migrations/2024-06-13-172904_create_exercises/: down.sql  up.sql
migrations/2024-06-14-091457_create_workout_templates/: down.sql  up.sql
migrations/2024-06-14-092013_create_wk_template_elements/: down.sql  up.sql
migrations/2024-08-22-091409_create_workout_executions/: down.sql  up.sql
migrations/2024-08-22-091857_create_wk_execution_elements/: down.sql  up.sql
src/: auth.rs  db.rs  lib.rs  main.rs  schema.rs  users.rs
src/controllers/: auth.rs  exercises.rs  mod.rs  users.rs
src/db/: mod.rs
src/handlers/: users.rs
src/lib/: errors.rs  test_utils.rs  utils.rs
src/lib/db/: exercises_db.rs  mod.rs  users_db.rs  wk_execution_elements_db.rs  wk_template_elements_db.rs  workout_executions_db.rs  workout_templates_db.rs
src/lib/errors/: mod.rs
src/lib/models/: exercise_models.rs  mod.rs  user_models.rs  wk_execution_elements_models.rs  wk_template_elements.rs  wk_template_elements_models.rs  workout_execution_models.rs  workout_templates_models.rs
src/lib/utils/: handlers.rs  mod.rs  tests.rs
src/models/: exercise_workouts.rs  exercises.rs  mod.rs  user.rs  user_models.rs  users.rs  workout_linkers.rs  workouts.rs
src/utils/: auth.rs  keycloak.rs  log.rs  mod.rs  test.rs
tests/: api_endpoints.rs  database_interactions.rs  get_user.rs  init.py  sample_data.sql  utils.py
tests/common/: mod.rs
tests/exercises/: test_get_exercise.py  test_search_exercises.py
tests/integration/: get_user.rs
tests/users/: test_create_user.py  test_get_user.py  test_patch_user.py  test_search_users.py
tests/workout-executions/: test_create_workout_execution.py  test_get_workout_execution.py
tests/workout-templates/: test_create_workout_template.py  test_delete_workout_template.py  test_get_all_workout_templates.py  test_get_workout_template.py
