[package]
name = "salamandra-server"
version = "0.2.0"
edition = "2021"


[dependencies]
lambda_http = "0.11.1"

# Database
diesel = { version = "2.1.6", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
diesel_async_migrations = "0.12.0"
bb8 = "0.8.3"

# Essential
tokio = {version="1.37.0", features=["full"]}
serde = {version ="1.0", features = ["derive"]}
serde_json = "1.0"
once_cell = "1.19.0"

# Datatypes
uuid = { version = "1.6.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22.1"
jsonwebtoken = "9.3.0"

# Logging and Monitoring
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
testcontainers = "0.17.0"
testcontainers-modules = {version = "0.5.0", features = ["postgres"]}

# ------------------- USERS
[[bin]]
name = "get_user"
path = "src/bin/users/get_user.rs"

[[bin]]
name = "create_user"
path = "src/bin/users/create_user.rs"

[[bin]]
name = "search_users"
path = "src/bin/users/search_users.rs"


# ------------------- EXERCISES
[[bin]]
name = "get_exercise"
path = "src/bin/exercises/get_exercise.rs"

[[bin]]
name = "search_exercises"
path = "src/bin/exercises/search_exercises.rs"


# ------------------- WORKOUT TEMPLATES
[[bin]]
name = "get_all_workout_templates"
path = "src/bin/workout-templates/get_all_workout_templates.rs"

[[bin]]
name = "get_workout_template"
path = "src/bin/workout-templates/get_workout_template.rs"

[[bin]]
name = "delete_workout_template"
path = "src/bin/workout-templates/delete_workout_template.rs"

[[bin]]
name = "create_workout_template"
path = "src/bin/workout-templates/create_workout_template.rs"
