[package]
name = "salamandra-server"
version = "0.2.0"
edition = "2021"


[dependencies]
lambda_http = "0.11.1"
url = "2.5.2"
urlencoding = "2.1.3"
aws-sdk-rds = "1.46.0"
aws-config = { version = "1.5.4", features = ["behavior-version-latest"] }
aws-sigv4 = "1.2.3"
aws-credential-types = "1.2.0"

# Database
diesel = { version = "2.1.6", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
diesel_async_migrations = "0.12.0"
rustls = "0.23.12"
rustls-native-certs = "0.7.1"
rustls-pemfile = "2.1.2"
tokio = {version="1.37.0", features=["full"]}
tokio-postgres = "0.7.11"
tokio-postgres-rustls = "0.12.0"

# Essential
futures-util = "0.3.30"
serde = {version ="1.0", features = ["derive"]}
serde_json = "1.0"
once_cell = "1.19.0"
regex = "1.10.5"
itertools = "0.13.0"

# Datatypes
uuid = { version = "1.6.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22.1"
jsonwebtoken = "9.3.0"

# Logging and Monitoring
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
testcontainers = "0.17.0"
testcontainers-modules = {version = "0.5.0", features = ["postgres"]}

[[bin]]
name = "users"
path = "src/bin/users/main.rs"

[[bin]]
name = "exercises"
path = "src/bin/exercises/main.rs"

[[bin]]
name = "workout_templates"
path = "src/bin/workout-templates/main.rs"

[[bin]]
name = "workout_executions"
path = "src/bin/workout-executions/main.rs"
